# lossless-context-management

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
hooks/: post_tool_use.sh  session_start.sh  user_prompt_submit.sh
src/lcm/: __init__.py  __main__.py  cli.py  server.py
src/lcm/compaction/: engine.py  escalation.py  file_explorer.py
src/lcm/hooks/: capture.py  inject.py
src/lcm/llm/: client.py
src/lcm/store/: database.py  files.py  messages.py  summaries.py
src/lcm/tools/: memory.py  operators.py  status.py
tests/: test_compaction.py  test_e2e.py  test_hooks.py  test_store.py  test_tools.py
